--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,19 +48,17 @@ jobs:
         location: ${{ env.GKE_ZONE }}
         credentials: ${{ secrets.GKE_SA_KEY }}
 
+    # The image in this case will be gcr.io/PROJECT_ID/IMAGE:GITHUB_BRANCH-GITHUB_SHA and stored to the environment value IMAGEWITHTAG
+    - name: Create image name and tag
+      run: echo "::set-env name=IMAGE_WITH_TAG::gcr.io/${{ secrets.GKE_PROJECT }}/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
+
     # Build the Docker image
     - name: Build
-      run: |-
-        docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-          .
+      run: docker build --tag "$IMAGE_WITH_TAG" .
 
     # Push the Docker image to Google Container Registry
     - name: Publish
-      run: |-
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+      run: docker push "$IMAGE_WITH_TAG"
 
     # Set up kustomize
     - name: Set up Kustomize
@@ -71,7 +69,7 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-        ./kustomize build . | kubectl apply -f -
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        ./kustomize edit set image PROJECT/IMAGE=$IMAGE_WITH_TAG
+        kubectl apply -k .
+        kubectl rollout status deployment $IMAGE
         kubectl get services -o wide
